# flower

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .swift-format  AGENTS.md  ALWAYS-AUTH-SUPERGRID.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FedAvgM_Baseline.ipynb  New Text Document.txt  Package.swift  README.md  RELEASE_PROCESS.md  ROADMAP.md  classes.dot  classes_Flower.dot  classes_Flower_color.dot  classes_cleaned.dot  classes_client.dot  classes_server.dot  classes_strategy.dot  classes_strategy_pattern.dot  docker-compose.yml  my_client.py  my_server.py  mypy.ini  packages.dot  packages_Flower.dot  project.yml  pyproject.toml  pytest.ini  requirements.txt  (+4 more)
baselines/: README.md  mypy.ini  pyproject.toml  requirements.txt
baselines/FL+XGBoost/: pyproject.toml
baselines/FedMLB/: README.md  pyproject.toml
baselines/FedMeta/: README.md
baselines/FedNTD/: EXTENDED_README.md  README.md  pyproject.toml
baselines/FedPM/: README.md  pyproject.toml
baselines/FedPer/: EXTENDED_README.md  README.md  pyproject.toml
baselines/FedSMOO/: README.md  pyproject.toml  requirements.txt  script.sh
baselines/FedVSSL/: README.md  pyproject.toml  requirements.txt
baselines/FjORD/: .gitignore  pyproject.toml
baselines/Horizontal_XGBoost/: .~lock.results.csv#  EXTENDED_README.md  README.md  pyproject.toml  results.csv
baselines/baseline/: pyproject.toml
baselines/baseline_template/: .gitignore  EXTENDED_README.md  README.md  client.py  models.py  pyproject.toml  strategy.py
baselines/cgsv/: README.md  pyproject.toml
baselines/cosine-gradient-sv/: README.md  pyproject.toml
baselines/dasha/: .gitignore  README.md  pyproject.toml  run_large_experiments.sh  run_small_experiments.sh
baselines/depthfl/: .gitignore  README.md  depthfl.sh  pyproject.toml
baselines/dev/: bootstrap.sh  create-baseline.sh  create_baselie.sh  format-baseline.sh  format.sh  rm-caches.sh  setup-defaults.sh  test-baseline-structure.sh  test-baseline.sh  test.sh  venv-create.sh  venv-delete.sh
baselines/doc/: guides.rst  index.rst  reference.rst  tutorials.rst
baselines/fcil/: README.md
baselines/fedNova/: README.md
baselines/fed_debug/: .gitignore  README.md  pyproject.toml
baselines/fedavg/: README.md  pyproject.toml
baselines/fedavg-mnist-new/: README.md  pyproject.toml
baselines/fedavgm/: README.md  conf-colab.sh  errors.md  pyproject.toml
baselines/fedbabu/: README.md  plot.ipynb  pyproject.toml
baselines/fedbn/: .gitignore  README.md  pyproject.toml  run_experiment.sh
baselines/feddebug/: .gitignore  README.md  job.sh  pyproject.toml
baselines/feddefender/: README.md  pyproject.toml
baselines/feddf/: README.md  pyproject.toml
baselines/fedexp/: README.md  pyproject.toml
baselines/fedfittech/: .gitignore  README.md  pyproject.toml  requirements.txt
baselines/fedfomo/: README.md  pyproject.toml
baselines/fedharmony/: fed_equal.py  get_gaussians.py  harmonisation_main.py  list_database.py  newJson.py  train_utils_fed.py  utils.py
baselines/fedht/: .gitignore  README.md  fedht_plot.py  pyproject.toml  run_exp.sh
baselines/fedhyb/: .gitignore  README.md  pyproject.toml
baselines/fedlc/: .gitignore  README.md  pyproject.toml
baselines/fedmeta/: README.md  pyproject.toml
baselines/fedmix/: README.md  pyproject.toml
baselines/fedmlb/: README.md  pyproject.toml
baselines/fedmss/: README.md  pyproject.toml
baselines/fednova/: README.md  pyproject.toml
baselines/fedntd/: README.md  pyproject.toml
baselines/fedopt/: README.md  pyproject.toml
baselines/fedpac/: README.md  pyproject.toml
baselines/fedpara/: .gitignore  README.md  pyproject.toml  run.sh
baselines/fedper/: README.md  pyproject.toml  results.pkl
baselines/fedpft/: .gitignore  README.md  pyproject.toml
baselines/fedpm/: .gitignore  README.md  pyproject.toml
baselines/fedprox/: .gitignore  README.md  pyproject.toml  run_experiments.sh  run_femnist_experiments.sh  run_mnist_experiments.sh
baselines/fedprox-upgrade/: README.md  pyproject.toml
baselines/fedrep/: .gitignore  README.md  pyproject.toml
baselines/fedrs/: .gitignore  README.md  pyproject.toml
baselines/fedsm/: pyproject.toml
baselines/fedsmoo/: script.sh
baselines/fedstar/: .gitignore  README.md  pyproject.toml  setup_datasets.sh
baselines/fedtest/: README.md  pyproject.toml
baselines/fedvssl/: .gitignore  README.md  pyproject.toml
baselines/fedwav2vec2/: README.md  pyproject.toml
baselines/fjord/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
baselines/flanders/: .gitignore  README.md  pyproject.toml  run.sh
baselines/floco/: .gitignore  (+3 more)
datasets/: .flake8  README.md  README.rst  devtool  pyproject.toml  taplo.toml
dev/: .flake8  README.md  add-shortlog.sh  add-swift-api-footer.sh  assign_reviewers.py  aws-ami-bootstrap-tf.sh  aws-ami-bootstrap-torch.sh  aws-ami-bootstrap.sh  aws_ami_bootstrap.sh  bootstrap-uv.sh  bootstrap.sh  build-all-docs.sh  build-baseline-docs.sh  build-docker-image-matrix.py  build-docs.sh  build-example-docs.py  build-example-docs.sh  build-hub-docs.sh  build-swift-api-ref.sh  build.sh  changelog.yml  changelog_config.toml  check-protos.sh  check-requirements-txt.sh  check_pr_title.py  check_protos.sh  deploy-android-docs.sh  deploy-docs.sh  deploy-swift-docs.sh  deploy_docs.sh  disable-telemetry.sh  docker_build.sh  docs-ui-config.yml  example-clients.sh  example-server.sh  fnt.sh  format-devtool.sh  format.sh  generate-matrices.sh  generate-requirements-txt.sh  (+45 more)
e2e/: .gitignore  driver.py  pyproject.toml  server.py  server_app.py  simulation.py  test.sh  test_driver.sh  test_driver_grpc_bidi.sh  test_driver_grpc_rere.sh  test_driver_rest.sh  test_exec_api.sh  test_exec_api_process.sh  test_flower_server.sh  test_legacy.sh  test_reconnection.sh  test_server.sh  test_simulation.sh  test_superexec.sh  test_superlink.sh  test_windows.ps1  test_windows.sh
framework/: .flake8  README.md  alembic.ini  pyproject.toml  taplo.toml  uv.md
(+18503 files in other folders)
