[build-system]
requires = [
    "poetry==1.1.6",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "flwr_baselines"
version = "0.16.0"
description = "Flower Baselines"
license = "Apache-2.0"
authors = ["The Flower Authors <enquiries@flower.dev>"]
readme = "README.md"
homepage = "https://flower.dev"
repository = "https://github.com/adap/flower"
documentation = "https://flower.dev"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8.3"
# Mandatory dependencies
flwr = "^0.15.0"  # For development: { path = "../../", develop = true }
torch = "^1.8.0"
torchvision = "^0.9.0"

[tool.poetry.dev-dependencies]
isort = "==5.7.0"
black = "==20.8b1"
docformatter = "==1.4"
mypy = "==0.790"
pylint = "==2.6.0"
pytest = "==6.2.1"
pytest-watch = "^4.2.0"
grpcio-tools = "==1.32.0"
mypy-protobuf = "==1.23"
rope = "==0.18.0"
sphinx = "==3.4.3"
flake8 = "==3.8.4"
sphinx-book-theme = "==0.0.39"
