[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-datasets"
version = "0.6.0"
description = "Flower Datasets"
license = "Apache-2.0"
authors = [{ name = "The Flower Authors", email = "hello@flower.ai" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Artificial Intelligence",
    "Dataset",
    "Federated AI",
    "Federated Analytics",
    "Federated Datasets",
    "Federated Evaluation",
    "Federated Learning",
    "Flower",
    "Machine Learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26.0,<3.0.0",
    "datasets>=4.0.0,<5.0.0",
    "tqdm>=4.66.1,<5.0.0",
    "rich>=13.5.0",
    "matplotlib>=3.7.5,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
]

[project.optional-dependencies]
vision = ["pillow>=6.2.1"]
audio = ["torch>=2.8.0", "torchcodec>=0.7.0"]

[project.scripts]
# `flwr-datasets` CLI
flwr-datasets = "flwr_datasets.cli.app:app"

[project.urls]
homepage = "https://flower.ai"
repository = "https://github.com/adap/flower"
documentation = "https://flower.ai/docs/datasets"

[dependency-groups]
dev = [
    "types-requests==2.31.0.20240125",
    "types-setuptools==80.9.0.20250822",
    "isort==5.13.2",
    "black[jupyter]==25.11.0",
    "taplo==0.9.3",
    "docformatter==1.7.5",
    "mypy==1.8.0",
    "pylint==3.3.1",
    "parameterized==0.9.0",
    "pytest==7.4.4",
    "pytest-watcher==0.4.3",
    "ruff==0.14.5",
    "devtool",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
devtool = { path = "devtool", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["flwr_datasets"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "pyproject.toml", "flwr_datasets/**"]

[tool.hatch.build]
exclude = ["/flwr_datasets/**/*_test.py"]

[tool.isort]
line_length = 88
indent = "    "
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["flwr_datasets"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code,too-few-public-methods,useless-import-alias"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-qq"
testpaths = ["./"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["importlib.metadata.*", "importlib_metadata.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "proto",
]

[tool.ruff.lint]
select = ["D", "E", "F", "W", "B", "ISC", "C4", "UP"]
fixable = ["D", "E", "F", "W", "B", "ISC", "C4", "UP"]
ignore = ["B024", "B027", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
