[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "devtool"
version = "0.0.0"
description = "Tools for developers."
license = "Apache-2.0"
authors = ["The Flower Authors <hello@flower.ai>"]
packages = [{ include = "devtool", from = "./" }]

[tool.poetry.dependencies]
python = "^3.10"
clang-format = "==17.0.6"
isort = "==5.13.2"
black = { version = "==25.11.0" }
taplo = "==0.9.3"
docformatter = "==1.7.5"
rope = "==1.13.0"
semver = "==3.0.2"
sphinx = "==7.4.7"
sphinx-intl = "==2.2.0"
sphinx-click = "==6.0.0"
myst-parser = "==3.0.1"
sphinx-design = "==0.6.1"
sphinx-copybutton = "==0.5.2"
sphinxcontrib-mermaid = "==0.9.2"
sphinxcontrib-youtube = "==1.4.1"
furo = "==2024.8.6"
sphinx-reredirects = "==0.1.5"
nbsphinx = "==0.9.5"
nbstripout = "==0.6.1"
sphinx-argparse = "==0.4.0"
mdformat = "==0.7.22"
mdformat-gfm = "==0.3.6"
mdformat-frontmatter = "==2.0.1"
mdformat-beautysh = "==0.1.1"
beautysh = "==6.1.0"
GitPython = "==3.1.32"
sphinx-substitution-extensions = "2022.02.16"
sphinxext-opengraph = "==0.9.1"
docstrfmt = { git = "https://github.com/charlesbvll/docstrfmt.git", branch = "patch-2", python = ">=3.10,<4.0.0" }

[tool.docstrfmt]
extend_exclude = [
    "**/ts-ref-api/*",
    "**/swift-ref-api/*",
    "**/conf.py",
    "**/_templates/autosummary/*",
]

[tool.isort]
profile = "black"
# `isort` treat "datasets" as first party by default
known_third_party = ["datasets"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
