[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e2e"
version = "1.0.0"
description = "Project configuration for ServerApp in E2E tests."
license = "Apache-2.0"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = ""

[tool.flwr.app.config]

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
